[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/sprites/barbar/blue/attack1.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/inan/Blue color.png" type="Texture" id=2]
[ext_resource path="res://scenes/enemies/Melee.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/barbar/blue/attack2.png" type="Texture" id=4]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player_2D.gd" type="Script" id=5]
[ext_resource path="res://assets/sfx/Hit-3.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/sfx/Hit-1.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/sfx/Hit-4.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sfx/Hit-2.wav" type="AudioStream" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 140.513

[sub_resource type="CapsuleShape2D" id=2]
radius = 23.0
height = 52.0

[sub_resource type="Animation" id=3]
resource_name = "Attack"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 4.92458, 1.68179, 0.196146 ),
"update": 0,
"values": [ 0.0, -29.6, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 2 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "sonido_de_mierda"
} ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hurtbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 2 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
radius = 36.0
height = 60.0

[node name="Melee" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 93 )

[node name="Sprite" type="Sprite" parent="Position2D"]
position = Vector2( 0, -93 )
texture = ExtResource( 2 )

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 91 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2( -69, 0 )
shape = SubResource( 5 )
disabled = true

[node name="RandomAudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
script = ExtResource( 5 )
samples = [ ExtResource( 7 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 8 ) ]
random_volume_range = 0
random_pitch_range = 0

[connection signal="body_entered" from="DetectionRange" to="." method="_on_DetectionRange_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
